w/a for missing break-inside: avoid support on narrow screens, categories > oldish

--- a/skin/assets/styles/components/article/_article-vgde.scss
+++ b/skin/assets/styles/components/article/_article-vgde.scss
@@ -355,6 +355,7 @@ body.home, body.category {
       padding: 7em $fdd-home-outer-padding-narrow-screen 0 $fdd-home-outer-padding-narrow-screen;
       .article-grid {
         break-inside: avoid;
+        min-height: 55vh; // to workaround missing support for `break-inside: avoid;`
         width: 100%;
         margin-bottom: 1em;
         .article-grid-wrapper {
